--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,16 +1,10 @@
-# .github/workflows/release.yaml
-
 on:
-  release:
-    types: [created]
-
-permissions:
-    contents: write
-    packages: write
-
+  push:
+    tags:
+      - "v*.*.*"
 jobs:
-  release-windows-amd64:
-    name: release windows/amd64
+  release:
+    name: Release
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
