--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,8 +3,8 @@ on:
     tags:
       - "v*.*.*"
 jobs:
-  release:
-    name: Release
+  build:
+    name: Build and release
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -12,7 +12,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.20
+        go-version: "1.20"
 
     - name: Test
       run: go test -v ./createdirs
