--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
         go-version: "1.20"
 
     - name: Build Windows 64
-      run: go build -v ./createdirs
+      run: go build -v ./...
       env:
         GOOS: windows
         GOARCH: amd64
@@ -31,3 +31,4 @@ jobs:
       with:
         files: |
           createdirs.exe
+          wadown.exe
