--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -4,7 +4,7 @@ on:
       - "v*.*.*"
 jobs:
   build:
-    name: Build and release
+    name: Run Tests
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
@@ -15,4 +15,4 @@ jobs:
         go-version: "1.20"
 
     - name: Test
-      run: go test -v ./createdirs
+      run: go test -v ./...
