--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,7 +20,7 @@ jobs:
         go-version: "1.20"
 
     - name: Build Windows 64
-      run: go build -v ./...
+      run: go build -v -o . ./...
       env:
         GOOS: windows
         GOARCH: amd64
