--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   release:
     name: Build and release
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
 
@@ -21,10 +21,6 @@ jobs:
 
     - name: Build Windows 64
       run: go build -v -o . ./...
-      env:
-        GOOS: windows
-        GOARCH: amd64
-        CGO_ENABLED: 1
 
     - name: Release
       uses: softprops/action-gh-release@v1
