--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,12 +20,11 @@ jobs:
         go-version: "1.20"
 
     - name: Build Windows 64
-      run: go build -v -o . ./...
+      run: go build -v -o build/ ./...
 
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          createdirs.exe
-          wadown.exe
+          build/*
