--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,8 +19,8 @@ jobs:
       with:
         go-version: "1.20"
 
-    - name: Build Windows 64
-      run: go build -v -o . ./...
+    - name: Build
+      run: go build -v -o build/ ./...
 
     - name: Test
       run: go test -v ./...
