--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,7 +10,7 @@ permissions:
 jobs:
   release:
     name: Build and release
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
 
@@ -20,15 +20,11 @@ jobs:
         go-version: "1.20"
 
     - name: Build Windows 64
-      run: go build -v -o . ./...
-      env:
-        GOOS: windows
-        GOARCH: amd64
+      run: go build -v -o build/ ./...
 
     - name: Release
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: |
-          createdirs.exe
-          wadown.exe
+          build/*
